tests/ui/no_comma_after_clone.rs
use dst_factory::make_dst_factory;

#[make_dst_factory(create, clone no_std)]
struct NoCommaAfterClone {
    id: i32,
    data: str,
}

fn main() {
}
